errors.txt
 *  Executing task: /usr/bin/g++ -g /home/arran/Documents/projects/games/NationStateSDL/source/*.cpp -o /home/arran/Documents/projects/games/NationStateSDL/bin/main -lSDL3 -lSDL3_image 

In file included from /usr/include/c++/15.1.1/bits/memory_resource.h:49,
                 from /usr/include/c++/15.1.1/string:72,
                 from /home/arran/Documents/projects/games/NationStateSDL/source/ChunkManager.h:5,
                 from /home/arran/Documents/projects/games/NationStateSDL/source/ChunkManager.cpp:1:
/usr/include/c++/15.1.1/tuple: In instantiation of ‘std::pair<_T1, _T2>::pair(std::tuple<_Args1 ...>&, std::tuple<_Args2 ...>&, std::_Index_tuple<_Indexes1 ...>, std::_Index_tuple<_Indexes2 ...>) [with _Args1 = {const ChunkCoord&}; long unsigned int ..._Indexes1 = {0}; _Args2 = {}; long unsigned int ..._Indexes2 = {}; _T1 = const ChunkCoord; _T2 = IsoTileMap]’:
/usr/include/c++/15.1.1/tuple:2876:63:   required from ‘std::pair<_T1, _T2>::pair(std::piecewise_construct_t, std::tuple<_Args1 ...>, std::tuple<_Args2 ...>) [with _Args1 = {const ChunkCoord&}; _Args2 = {}; _T1 = const ChunkCoord; _T2 = IsoTileMap]’
 2876 | ename _Build_index_tuple<sizeof...(_Args2)>::__type())
      |                                                      ^
/usr/include/c++/15.1.1/bits/new_allocator.h:191:4:   required from ‘void std::__new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::pair<const ChunkCoord, IsoTileMap>; _Args = {const std::piecewise_construct_t&, std::tuple<const ChunkCoord&>, std::tuple<>}; _Tp = std::__detail::_Hash_node<std::pair<const ChunkCoord, IsoTileMap>, true>]’
  191 |         { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/15.1.1/bits/alloc_traits.h:674:17:   required from ‘static void std::allocator_traits<std::allocator<_CharT> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = std::pair<const ChunkCoord, IsoTileMap>; _Args = {const std::piecewise_construct_t&, std::tuple<const ChunkCoord&>, std::tuple<>}; _Tp = std::__detail::_Hash_node<std::pair<const ChunkCoord, IsoTileMap>, true>; allocator_type = std::allocator<std::__detail::_Hash_node<std::pair<const ChunkCoord, IsoTileMap>, true> >]’
  674 |           __a.construct(__p, std::forward<_Args>(__args)...);
      |           ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/15.1.1/bits/hashtable_policy.h:1556:36:   required from ‘std::__detail::_Hashtable_alloc<_NodeAlloc>::__node_type* std::__detail::_Hashtable_alloc<_NodeAlloc>::_M_allocate_node(_Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const ChunkCoord&>, std::tuple<>}; _NodeAlloc = std::allocator<std::__detail::_Hash_node<std::pair<const ChunkCoord, IsoTileMap>, true> >; __node_ptr = std::allocator<std::__detail::_Hash_node<std::pair<const ChunkCoord, IsoTileMap>, true> >::value_type*]’
 1556 |             __node_alloc_traits::construct(__alloc, __n->_M_valptr(),
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
 1557 |                                            std::forward<_Args>(__args)...);
      |                                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/15.1.1/bits/hashtable.h:305:35:   required from ‘std::_Hashtable<_Key, _Value, _Alloc, _ExtractKey, _Equal, _Hash, _RangeHash, _Unused, _RehashPolicy, _Traits>::_Scoped_node::_Scoped_node(std::_Hashtable<_Key, _Value, _Alloc, _ExtractKey, _Equal, _Hash, _RangeHash, _Unused, _RehashPolicy, _Traits>::__hashtable_alloc*, _Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const ChunkCoord&>, std::tuple<>}; _Key = ChunkCoord; _Value = std::pair<const ChunkCoord, IsoTileMap>; _Alloc = std::allocator<std::pair<const ChunkCoord, IsoTileMap> >; _ExtractKey = std::__detail::_Select1st; _Equal = std::equal_to<ChunkCoord>; _Hash = std::hash<ChunkCoord>; _RangeHash = std::__detail::_Mod_range_hashing; _Unused = std::__detail::_Default_ranged_hash; _RehashPolicy = std::__detail::_Prime_rehash_policy; _Traits = std::__detail::_Hashtable_traits<true, false, true>; std::_Hashtable<_Key, _Value, _Alloc, _ExtractKey, _Equal, _Hash, _RangeHash, _Unused, _RehashPolicy, _Traits>::__hashtable_alloc = std::_Hashtable<ChunkCoord, std::pair<const ChunkCoord, IsoTileMap>, std::allocator<std::pair<const ChunkCoord, IsoTileMap> >, std::__detail::_Select1st, std::equal_to<ChunkCoord>, std::hash<ChunkCoord>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<true, false, true> >::__hashtable_alloc]’
  305 |             _M_node(__h->_M_allocate_node(std::forward<_Args>(__args)...))
      |                     ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/15.1.1/bits/hashtable_policy.h:891:42:   required from ‘std::__detail::_Map_base<_Key, std::pair<const _Key, _Val>, _Alloc, std::__detail::_Select1st, _Equal, _Hash, _RangeHash, _Unused, _RehashPolicy, _Traits, true>::mapped_type& std::__detail::_Map_base<_Key, std::pair<const _Key, _Val>, _Alloc, std::__detail::_Select1st, _Equal, _Hash, _RangeHash, _Unused, _RehashPolicy, _Traits, true>::operator[](const key_type&) [with _Key = ChunkCoord; _Val = IsoTileMap; _Alloc = std::allocator<std::pair<const ChunkCoord, IsoTileMap> >; _Equal = std::equal_to<ChunkCoord>; _Hash = std::hash<ChunkCoord>; _RangeHash = std::__detail::_Mod_range_hashing; _Unused = std::__detail::_Default_ranged_hash; _RehashPolicy = std::__detail::_Prime_rehash_policy; _Traits = std::__detail::_Hashtable_traits<true, false, true>; mapped_type = IsoTileMap; key_type = ChunkCoord]’
  891 |       typename __hashtable::_Scoped_node __node {
      |                                          ^~~~~~
/usr/include/c++/15.1.1/bits/unordered_map.h:1058:20:   required from ‘std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::mapped_type& std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::operator[](const key_type&) [with _Key = ChunkCoord; _Tp = IsoTileMap; _Hash = std::hash<ChunkCoord>; _Pred = std::equal_to<ChunkCoord>; _Alloc = std::allocator<std::pair<const ChunkCoord, IsoTileMap> >; mapped_type = IsoTileMap; key_type = ChunkCoord]’
 1058 |       { return _M_h[__k]; }
      |                ~~~~^
/home/arran/Documents/projects/games/NationStateSDL/source/ChunkManager.cpp:15:28:   required from here
   15 |             chunks[newchunk] = IsoTileMap(renderer, this, x, y, 10, 10, 64, 32);
      |                            ^
/usr/include/c++/15.1.1/tuple:2887:9: error: no matching function for call to ‘IsoTileMap::IsoTileMap()’
 2887 |         second(std::forward<_Args2>(std::get<_Indexes2>(__tuple2))...)
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/15.1.1/tuple:2887:9: note: there are 2 candidates
In file included from /home/arran/Documents/projects/games/NationStateSDL/source/ChunkManager.h:6:
/home/arran/Documents/projects/games/NationStateSDL/source/TileMap.h:16:5: note: candidate 1: ‘IsoTileMap::IsoTileMap(SDL_Renderer*, ChunkManager*, float, float, int, int, int, int)’
   16 |     IsoTileMap(SDL_Renderer *renderer, ChunkManager *manager, float x, float y, int width, int height, int tileWidth, int tileHeight);
      |     ^~~~~~~~~~
/home/arran/Documents/projects/games/NationStateSDL/source/TileMap.h:16:5: note: candidate expects 8 arguments, 0 provided
/home/arran/Documents/projects/games/NationStateSDL/source/TileMap.h:13:7: note: candidate 2: ‘IsoTileMap::IsoTileMap(const IsoTileMap&)’
   13 | class IsoTileMap : public renderableObject
      |       ^~~~~~~~~~
/home/arran/Documents/projects/games/NationStateSDL/source/TileMap.h:13:7: note: candidate expects 1 argument, 0 provided

 *  The terminal process "/usr/bin/bash '-c', '/usr/bin/g++ -g /home/arran/Documents/projects/games/NationStateSDL/source/*.cpp -o /home/arran/Documents/projects/games/NationStateSDL/bin/main -lSDL3 -lSDL3_image'" terminated with exit code: 1. 